Fix SSL verification and add comprehensive demo
- Fix object storage client SSL verification (disabled by default for self-signed certs)
- Change --no-ssl-verify to --ssl-verify flag (SSL verification off by default)
- Add comprehensive demo script showcasing all features
- Verify all functionality: upload, download, sync, health checks
- Ready for production use with proper SSL certificate handling

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,20 @@ logs/
 # Data files (optional - uncomment if you don't want to track data)
 # ldap-data/
 
+# Object storage data and metadata (exclude from git)
+object-storage/
+object-storage-metadata/
+certs/
+
+# Demo and test files
+test-file.txt
+test-sync-folder/
+downloaded-test.txt
+demo-*.jpg
+demo-*.pdf
+sync-demo/
+downloads/
+
 # Runtime files
 *.pid
 *.sock
